@@ -33,6 +33,8 @@ activation event.
 +Fix incorrect highlighting for some css2 keywords.
 +Don't crash when bitmap resource for tab navigator fails to load correctly.
 +Fix issue where some UpdateUI events where not getting handled in modal dialogs.
++Fix inconsistency that could lead to an un-handled exception when switching between
+different saved perspectives.
 
 #-----------------------------------------------------------------------------#
 
